联系人列表 分组 定位

--- a/WX/src/main/res/values/strings.xml
+++ b/WX/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="Application_and_notify">申请与通知</string>
     <string name="group_chat">群聊</string>
     <string name="list_is_for">正在获取好友和群聊列表...</string>
+
+    <string name="search_header">搜</string>
 </resources>
