--- a/WX/src/main/res/values/strings.xml
+++ b/WX/src/main/res/values/strings.xml
@@ -39,4 +39,11 @@
 
     <string name="send_fail">发送消息失败,</string>
     <string name="connect_failuer_toast">请检查网络或稍候重试</string>
+    <string name="button_pushtotalk">按住说话</string>
+    <string name="move_up_to_cancel">手指上滑，取消发送</string>
+    <string name="release_to_cancel">松开手指，取消发送</string>
+    <string name="recoding_fail">录音失败，请重试！</string>
+
+    <string name="text_delivered_msg">送达</string>
+    <string name="text_ack_msg">已读</string>
 </resources>
